# flutter_recorder

./: .gitignore  .metadata  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  init_recorder_module.sh  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_recorder_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: loopback.dart  main.dart  test.dart
example/lib/tools/: bmp_header.dart
example/lib/ui/: bars.dart  fft_painter.dart  vu_meter.dart  wave_painter.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: test_recording.dart
example/web/: index.html
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_recorder.podspec
ios/Classes/: flutter_recorder.c  flutter_recorder.mm
ios/Frameworks/ogg.xcframework/: Info.plist
ios/Frameworks/opus.xcframework/: Info.plist
lib/: enums.dart  flutter_recorder.dart  flutter_recorder_bindings_generated.dart
lib/exceptions/: exceptions.dart
lib/src/: audio_data_container.dart  enums.dart  flutter_recorder.dart  recorder.dart
lib/src/bindings/: flutter_recorder_bindings_generated.dart  js_extension.dart  recorder.dart  recorder_io.dart  recorder_web.dart
lib/src/exceptions/: exceptions.dart  exceptions_from_cpp.dart
lib/src/filters/: autogain.dart  echo_cancellation.dart  filters.dart
lib/src/worker/: worker.dart
linux/: CMakeLists.txt
linux/libs/: libogg.so.0.8.5  libopus.so.0.10.1
macos/: flutter_recorder.podspec
macos/Classes/: flutter_recorder.mm
src/: CMakeLists.txt  analyzer.cpp  analyzer.h  capture.cpp  capture.h  circular_buffer.h  common.h  enums.h  flutter_recorder.c  flutter_recorder.cpp  flutter_recorder.h  miniaudio.h  opus_encoder_pipeline.cpp  opus_encoder_pipeline.h  opus_ogg_writer.cpp  opus_ogg_writer.h  wav.h
src/fft/: soloud_fft.cpp  soloud_fft.h
src/filters/: autogain.cpp  autogain.h  echo_cancellation.cpp  echo_cancellation.h  filters.cpp  filters.h  generic_filter.h
test/: android_input_preset_test.dart  autogain_metadata_test.dart  recording_streaming_format_test.dart
test/cpp/: autogain_test.cpp
web/: compile_init_recorder_module.sh  compile_wasm.sh  init_recorder_module.dart  init_recorder_module.dart.js  init_recorder_module.dart.js.deps  init_recorder_module.dart.js.map  libflutter_recorder_plugin.js  libflutter_recorder_plugin.wasm  worker.dart  worker.dart.js  worker.dart.js.deps  worker.dart.js.map
windows/: CMakeLists.txt
windows/libs/: ogg.lib  opus.lib
xiph/: build_Android.sh  build_Linux.sh  build_OSX.sh  build_Web.sh.txt  build_Windows.bat  build_iOS.sh  fr_rename.cmake
